--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,59 @@
-.App {
+.pane {
   text-align: center;
+  background-color: #232fd1b2;
+  border: 6px solid #4260d4;
+  border-radius: 7px;
+  margin-top: 10px;
+  margin-left: 10px;
+  margin-right: 10px;
+  transition-duration: 0.2s;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.pane:hover {
+  border: 9px solid #6564db;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.button {
+  width: 100%;
+  padding-top: 18px;
+  padding-bottom: 18px;
+  background-color: #6564db;
+  border: 0px;
+  border-radius: 7px;
+  height: 102px;
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  box-shadow: 2px 4px 4px rgba(0, 0, 0, 0.25);
+  transition-duration: 0.2s;
+  cursor: pointer;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.button:hover {
+  box-shadow: 0px 3px 3px rgba(0, 0, 0, 0.25);
+  box-shadow: 1.5px 3px 3px rgba(0, 0, 0, 0.25);
 }
 
-.App-link {
-  color: #61dafb;
+.button:active {
+  box-shadow: 0px 2px 2px rgba(0, 0, 0, 0.25);
+  box-shadow: 1px 2px 2px rgba(0, 0, 0, 0.25);
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.box {
+  float: left;
+  width: 50%;
+  min-height: 100;
+  padding-left: 18px;
+  padding-right: 18px;
+  /* border: 2px solid #ffffff; */
+}
+
+.clearfix {
+  text-align: center;
+  margin-bottom: 35px;
+  /* border: 2px solid rgb(97, 97, 97); */
+}
+
+.clearfix::after {
+  content: "";
+  clear: both;
+  display: table;
 }
