--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,32 @@
-body {
+@import url("https://fonts.googleapis.com/css2?family=Audiowide&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap");
+
+* {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  background-color: #89d2dc;
+}
+
+h1 {
+  margin-top: 35px;
+  font-family: "Audiowide", cursive;
+  font-size: 64px;
+  color: #101d42;
+}
+
+p {
+  margin: 18px;
+  font-family: "Montserrat", sans-serif;
+  font-weight: 400;
+  color: #0d1317;
+  font-size: 24px;
+}
+
+button {
+  font-family: "Montserrat", sans-serif;
+  font-weight: 500;
+  color: #0d1317;
+  font-size: 24px;
 }
