--- a/src/App.css
+++ b/src/App.css
@@ -1,12 +1,38 @@
+.grid-container {
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 1fr);
+  grid-gap: 10px;
+  justify-items: stretch;
+  align-items: stretch;
+}
+
+.grid-container > * {
+  padding: 1em;
+}
+
+.grid-container > *:first-child {
+  grid-column: 1/3;
+}
+
+.grid-container > *:nth-child(2) {
+  grid-column: 1/2;
+  grid-row: 2/3;
+}
+
+.grid-container > *:nth-child(3) {
+  grid-column: 2/3;
+  grid-row: 2/4;
+}
+
 .pane {
   text-align: center;
   background-color: #232fd1b2;
   border: 6px solid #4260d4;
   border-radius: 7px;
-  margin-top: 10px;
+  /* margin-top: 10px;
   margin-left: 10px;
-  margin-right: 10px;
-  position: absolute;
+  margin-right: 10px; */
   transition-duration: 0.2s;
 }
 
@@ -49,7 +75,7 @@
 
 .clearfix {
   text-align: center;
-  margin-bottom: 35px;
+  margin-bottom: 0px;
   /* border: 2px solid rgb(97, 97, 97); */
 }
 
