--- a/src/index.css
+++ b/src/index.css
@@ -7,33 +7,34 @@
 
 body {
   background-color: #89d2dc;
+  /* background: url("logo.png") no-repeat center center fixed;
+  background-size: 100%; */
 }
 
 h1 {
-  margin-top: 35px;
   font-family: "Audiowide", cursive;
-  font-size: 64px;
+  font-size: 46.08px;
   color: #101d42;
 }
 
 p {
-  margin: 18px;
+  margin: 16px;
   font-family: "Montserrat", sans-serif;
   font-weight: 400;
   color: #0d1317;
-  font-size: 24px;
+  font-size: 17.28px;
 }
 
 button {
   font-family: "Montserrat", sans-serif;
   font-weight: 500;
   color: #0d1317;
-  font-size: 24px;
+  font-size: 17.28px;
 }
 
 input {
   font-family: "Montserrat", sans-serif;
-  font-size: 30px;
+  font-size: 21.6px;
   text-align: center;
   background-color: #6564db;
   border: 0px;
